# DODdroid

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: CMakeLists.txt  actor_frag.hpp  actor_vert.hpp  error.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  hello-jni.c  log.cpp  log.hpp  main.cpp  types.cpp  types.hpp  utils.cpp  utils.hpp  vk_utils.cpp  vk_utils.hpp  vulkan_interface.cpp  vulkan_interface.hpp  vulkan_wrapper.cpp  vulkan_wrapper.hpp
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ntkinteractive/doddroid/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/shaders/: actor.frag  actor.vert
gradle/wrapper/: gradle-wrapper.properties
